# Conductor

./: .gitignore  CMakeLists.txt  README.md  run.sh
Conductor/include/: sgemm.cuh  utils.cuh
Conductor/src/: sgemm.cu
Engine/include/: sgemm.cuh  utils.cuh
Engine/src/: main.cu
Server/include/: base_service.hpp
backends/client/: client.cpp
backends/client/include/: client.hpp
backends/engine/include/: fused_kernel.cuh  inference_engine.h  inference_engine_impl.h  kernels.cuh
backends/engine/src/: inference_engine_impl.cu  main.cu  runner.cuh
backends/engine/src/kernels/: sgemm.cuh
benchmarks/: profiling_sgemm.cu
examples/: profiling_kernel.cu
profiling/: profiling_sgemm.cu
server/: batching_service.cpp  main.cpp
server/include/: base_service.hpp  batching_service.hpp  connection_handler.hpp  lf_queue.hpp  macros.hpp  server.hpp  thread_pool_service.hpp  utils.hpp
